# venox_site

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  frontend.Dockerfile  frontend.nginx.conf  index.html  package-lock.json  package.json  vite.config.ts
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  channels_info.db  flake.nix
backend/src/: main.rs
backend/src/model/: mod.rs  soundcloud.rs  youtube.rs
backend/src/util/: db.rs
src/: App.vue  main.ts
src/assets/: main.css
src/components/header/: venoxHeader.vue  venoxheader.vue
src/components/main/: ArtGallery.vue  CustomAudioPlayer.vue  DisplayVideo.vue  FeaturedVideo.vue  HomeHero.vue  MusicSection.vue  PlayButton.vue  VideoGrid.vue
