[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
reqwest = "0.12.15"
rusqlite = { version = "0.37.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.7.0"
serde_json = "1.0.141"
tokio = { version = "1.44.2", features = ["full"] }
